name:                Scheduler
version:             0.1.0.0
-- synopsis:
description:         A way to choose your classes from SIS without having to worry about conflicts
homepage:            https://github.com/skyb0rg007/Scheduler#readme
license:             BSD3
license-file:        LICENSE
author:              Skye Soss
maintainer:          skye.soss@tufts.edu
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Datatypes
  build-depends:       base >= 4.7 && < 5
                     , lens
  default-language:    Haskell2010

executable Scheduler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Scheduler
  default-language:    Haskell2010

test-suite Scheduler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Scheduler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Scheduler
